DeployConfig/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o DeployConfig
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
          -o DeployConfig
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres-compose-network: "true"
        io.kompose.service: db
    spec:
      containers:
      - args:
        - -p
        - "5433"
        image: postgres
        imagePullPolicy: ""
        name: db-postgres
        ports:
        - containerPort: 7777
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
