DeployConfig/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o DeployConfig
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
          -o DeployConfig
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres-compose-network: "true"
        io.kompose.service: eureka
    spec:
      containers:
      - env:
        - name: eureka.client.fetchRegistry
          value: "false"
        - name: eureka.client.registerWithEureka
          value: "false"
        - name: eureka.client.serviceUrl.defaultZone
          value: http://eureka-server:8761/eureka/
        - name: server.port
          value: "8761"
        image: eureka-server:1.0.0
        imagePullPolicy: ""
        name: eureka-server
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
