DeployConfig/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o DeployConfig
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
  - name: "16543"
    port: 16543
    targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
