DeployConfig/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yml
      -o DeployConfig
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  ports:
  - name: "9001"
    port: 9001
    targetPort: 9001
  selector:
    io.kompose.service: webapi
status:
  loadBalancer: {}
